src/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply scroll-smooth;
    accent-color: theme(colors.indigo.500);
    color-scheme: dark light;
  }

  body {
    @apply overflow-y-scroll;
    @apply bg-white dark:bg-neutral-900;
  }

  ::selection {
    @apply bg-indigo-500/75 text-white;
  }

  :root {
    --react-hot-toast-fg: theme(colors.black);
    --react-hot-toast-bg: theme(colors.white);
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --react-hot-toast-fg: theme(colors.white);
      --react-hot-toast-bg: theme(colors.neutral.800);
    }
  }
}

@layer components {
  a,
  input,
  button,
  textarea,
  select:not(.moddermore-input) {
    @apply focus:outline-none focus:ring focus:ring-indigo-400/60;
  }

  .title {
    @apply mb-10 text-4xl font-bold;
  }

  .layout {
    @apply mx-auto mb-40 flex max-w-[75ch] flex-col px-6;
  }

  :not(select).moddermore-input {
    @apply w-full rounded bg-neutral-100 px-3 py-2 shadow-sm dark:bg-neutral-800;
    @apply border-2 border-transparent;
  }

  .moddermore-input.invalid {
    @apply border-red-500;
  }

  select.moddermore-input {
    @apply form-select block rounded border-none bg-neutral-100 shadow-sm dark:bg-neutral-800;
    @apply focus:outline-none focus:ring focus:ring-indigo-400/60;
  }

  .moddermore-form-label {
    @apply flex flex-col gap-y-2;
  }

  .moddermore-form-label span {
    @apply text-sm font-semibold;
  }

  .moddermore-form-label :is(input, select) {
    @apply moddermore-input;
  }

  .primaryish-button {
    @apply flex items-center gap-x-3 rounded-md px-3 py-2 text-sm font-medium transition-all;
    @apply bg-indigo-500 text-white hover:bg-indigo-400 disabled:opacity-80;
  }

  .primaryish-button.secondaryish-instead {
    @apply bg-transparent text-black hover:bg-indigo-500/10 hover:text-indigo-400 focus:ring-indigo-400/40 dark:text-white;
  }

  .primaryish-button.oh-no {
    @apply bg-red-500 text-white hover:bg-red-400 focus:ring-red-400/50;
  }

  .primaryish-button.modrinth-themed {
    @apply bg-[hsl(155,58%,38%)] hover:bg-[hsl(155,58%,48%)] focus:ring-[hsla(155,58%,38%,60%)];
  }

  .primaryish-button.idk-blue-themed {
    @apply bg-sky-500 hover:bg-sky-400 focus:ring-sky-500/60;
  }

  .primaryish-button.fuchsia-themed {
    @apply bg-fuchsia-500 hover:bg-fuchsia-400 focus:ring-fuchsia-500/60;
  }

  .primaryish-button.greenish {
    @apply bg-green-500 hover:bg-green-400 focus:ring-green-500/60;
  }

  .primaryish-button.pls-subscribe {
    @apply rounded-xl bg-gradient-to-br from-indigo-500 to-green-500 px-6 py-4 text-2xl;
  }

  .primaryish-button.showcase {
    @apply px-6 py-4 text-lg disabled:scale-100;
  }

  button.dropdown-button {
    @apply flex flex-row items-center gap-x-2 px-3 py-2 text-sm font-medium;
    @apply w-full bg-zinc-50 text-black dark:bg-neutral-700 dark:text-white;
    @apply focus:ring-0 disabled:opacity-75;
  }

  .landing-page-fade-out {
    -webkit-mask-image: -webkit-gradient(
      linear,
      left top,
      left 75%,
      from(rgba(0, 0, 0, 1)),
      to(rgba(0, 0, 0, 0))
    );
    mask-image: -webkit-gradient(
      linear,
      left top,
      left 75%,
      from(rgba(0, 0, 0, 1)),
      to(rgba(0, 0, 0, 0))
    );
  }

  .data-list {
    @apply flex flex-col gap-y-2 text-neutral-700 dark:text-neutral-300;
  }

  .data-list strong {
    @apply font-medium text-black dark:text-white;
  }

  .new-card {
    @apply bg-neutral-100 px-5 py-8 dark:bg-neutral-800;
    @apply flex flex-col items-center gap-y-2 rounded;
    @apply transition-shadow;
  }

  .new-card > span {
    @apply text-xl font-semibold;
  }

  .results-list {
    @apply flex w-full flex-col gap-y-2;
  }
  .results-list > details {
    @apply flex w-full flex-col items-center rounded bg-white p-2 shadow-sm dark:bg-neutral-700;
  }
  .results-list > details > summary {
    @apply cursor-default text-lg font-medium hover:cursor-pointer;
  }
  .results-list > details > ul {
    @apply mt-2 flex w-full flex-col gap-y-0.5;
  }

  .dialog.overlay {
    @apply fixed inset-0 bg-white/75 backdrop-blur-md dark:bg-neutral-900/75;
  }

  .dialog.content {
    @apply fixed top-1/2 left-1/2 z-[99] max-h-[85vh] w-[90%] max-w-lg -translate-x-1/2 -translate-y-1/2 overflow-y-auto;
    @apply rounded-lg bg-white p-8 dark:bg-neutral-900;
    @apply focus:outline-none;
  }

  .moddermore-footer {
    @apply mt-40 flex w-full flex-col items-start gap-y-4 bg-neutral-100 px-20 py-16 dark:bg-neutral-800;
  }

  .moddermore-footer > p,
  .moddermore-footer > a {
    @apply text-sm font-normal text-neutral-500 hover:text-neutral-700 dark:text-neutral-400 dark:hover:text-neutral-200;
    @apply transition-all;
  }

  @keyframes spin-fast {
    to {
      transform: rotate(360deg);
    }
  }

  .animate-spin-fast {
    animation: spin-fast 0.25s linear infinite;
  }

  .skeleton {
    @apply relative inline-block overflow-hidden rounded-md;
    @apply bg-neutral-100 dark:bg-neutral-800;
  }

  .skeleton::after {
    @apply absolute inset-0 -translate-x-full;
    background-image: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0) 0,
      rgba(0, 0, 0, 0.025) 20%,
      rgba(0, 0, 0, 0.05) 60%,
      rgba(0, 0, 0, 0)
    );
    animation: shimmer 1.5s infinite;
    content: '';

    @media (prefers-color-scheme: dark) {
      background-image: linear-gradient(
        90deg,
        rgba(255, 255, 255, 0) 0,
        rgba(255, 255, 255, 0.025) 20%,
        rgba(255, 255, 255, 0.05) 60%,
        rgba(255, 255, 255, 0)
      );
    }
  }

  @keyframes shimmer {
    100% {
      transform: translateX(100%);
    }
  }
}

#nprogress .spinner {
  display: none;
}

#nprogress .spinner-icon {
  display: none;
}

.react-hot-toast {
  column-gap: 0.625rem;
}
.react-hot-toast > [role='status'] {
  justify-content: flex-start;
}

